--- a/04-Position/03-Kocici-domecek/style.css
+++ b/04-Position/03-Kocici-domecek/style.css
@@ -19,6 +19,7 @@ h1 {
 	border: 5px solid black;
 	border-radius: 20px;
 	background: url(images/stred.png) no-repeat center/cover;
+	position: relative;
 	/*
 		tady asi budeš muset něco přidat, abys
 		pak mohla pozicovat kočky v rámci domečku
@@ -31,6 +32,10 @@ h1 {
 .dopis {
 	width: 84px;
 	height: 150px;
+	position: absolute;
+	left:0;
+	bottom:0;
+
 	/*
 		kočka si svoje zamilované dopisy
 		nejraději čte v levém dolním rohu domečku
@@ -41,6 +46,10 @@ h1 {
 .motyl {
 	width: 170px;
 	height: 118px;
+	position: absolute;
+	left: 265px;
+	top: 141px;
+
 	/*
 		kočka nejraději honí motýly přesně
 		uprostřed domečku, protože tam má na
@@ -52,6 +61,9 @@ h1 {
 .kniha {
 	width: 120px;
 	height: 140px;
+	position: absolute;
+	left: -60px;
+	top:-70px;
 	/*
 		kočka si ráda čte svoje knihy v klidu,
 		proto sedí v levém horním rohu domečku,
@@ -65,6 +77,10 @@ h1 {
 .sluchatka {
 	width: 124px;
 	height: 150px;
+	position: absolute;
+	top: 30px;
+	right: 30px;
+
 	/*
 		tahle kočka poslouchá hudbu a na tancování
 		si vybrala místo v pravém horním rohu domečku,
@@ -78,6 +94,9 @@ h1 {
 .spanek {
 	width: 154px;
 	height: 75px;
+	position: absolute;
+	bottom: 0;
+	right: 0;
 	/*
 		kočka s myší je unavená, a proto chce jít
 		spát do pravého dolního rohu domečku
